# docs/swagger.yaml
@@ -1456,8 +1456,12 @@ paths:
         description: New status (ACCEPTED, DECLINED, BLOCKED)
         required: true
       responses:
-        "204":
-          description: No Content
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User.FriendWithStatus'
+          description: OK
         "400":
           content:
             application/json:
